--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
@@ -46,6 +47,7 @@
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
