--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^12.19.2",
+    "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
